<resources>
    <string name="app_name">Quizze</string>
    <string name="science">Science</string>
    <string name="basics_of_programming_logic">Basics of Programming Logic</string>
    <string name="basics_of_data_structures">Basics of Data Structures</string>
    <string name="object_oriented_programming">Object Oriented Programming</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="database_management_systems">Database Management Systems</string>
    <string name="online_quiz">Online Quiz</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="logout">Logout</string>
</resources>
