<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    android:background="@drawable/blackbg"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <include layout="@layout/app_main_toolbar"/>

    <ImageView
        android:layout_width="120dp"
        android:src="@drawable/quizimage"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_height="120dp" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/basics_of_programming_logic"
        android:background="#ffa500"
        android:layout_gravity="center"
        android:id="@+id/bopl"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:layout_height="60dp" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/basics_of_data_structures"
        android:background="#ffa500"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:padding="8dp"
        android:layout_height="60dp" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/object_oriented_programming"
        android:background="#ffa500"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="60dp" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/operating_systems"
        android:background="#ffa500"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="60dp" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/database_management_systems"
        android:background="#ffa500"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/online_quiz"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#ffa500"
        android:textSize="20sp"
        android:id="@+id/online_quiz"
        android:gravity="center"
        android:linksClickable="true"
        android:autoLink="web"
        android:layout_height="wrap_content"/>

</LinearLayout>
</ScrollView>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:id="@+id/mainnavView"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        app:menu="@menu/main_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>